[package]
name = "VRDancing_Public_db_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde_derive = "1.0"
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
meilisearch-sdk = "0.24.3"
dotenv = "0.15"